[package]
name = "resizeimg"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
#hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["brotli", "deflate", "gzip", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
image = { version = "0.24", features = ["avif-encoder"] }
libvips = "1.6.1"
toml = "0.8.9"
serde = { version = "1.0.196", features = ["derive"] }
axum = { version = "0.7", features = ["http2"] }
regex = "1.10.3"
